# kg-digital-humanities

./: CITATION.cff  LICENSE  README.md  pyproject.toml
data/raw/: germany_authors_1000_labels_2026-06-12.json  germany_authors_1000_raw_2026-06-12.json  germany_authors_100_labels_2026-06-12.json  germany_authors_100_raw_2026-06-12.json  germany_authors_3000_labels_2026-06-12.json  germany_authors_3000_raw_2026-06-12.json
notebooks/tutorials/: tutorial_wikidata_sparql.ipynb  wdqs_sparqlwrapper_test.ipynb
results/graphs/: germany_authors_1000_2026-06-12_kg_all.html  germany_authors_100_2026-06-12_kg_all.html  germany_authors_3000_2026-06-12_kg_all.gexf
scripts/: build_kg.py  collect_data.py
src/kg_dh/: __init__.py  config.py  fetch.py  graph.py  visualize.py
src/kg_dh/queries/: __init__.py  authors.py
