[project]
name = "kg-dh"
version = "0.1.0"
description = "Knowledge Graph for Digital Humanities"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "http-client>=0.1.22",
    "logging>=0.4.9.6",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sparqlwrapper>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
