[project]
name = "kg-dh"
version = "0.1.0"
description = "Knowledge Graph for Digital Humanities"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
